--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -5,3 +5,13 @@
   justify-content: center;
   min-height: 100vh;
 }
+
+.languageSelect {
+  color: white;
+  background: #23272a;
+
+  border: 1px solid;
+  border-radius: 0.25em;
+  padding: 8px;
+  outline: none;
+}
