--- a/apps/home/src/pages/_app.css
+++ b/apps/home/src/pages/_app.css
@@ -1,6 +1,5 @@
 body {
   background: #23272a;
-
-  font-family: 'Atkinson Hyperlegible', sans-serif;
+  font-family: "Atkinson Hyperlegible", sans-serif;
   color: white;
 }
